# metadataparser

./: LICENSE  README.md  pyproject.toml  requirements.txt
tncpas_metadata/: __init__.py  color.py  definition.py  errors.py  identifier.py  parser.py
