[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadataparser"
authors = [
    {name = "nattadasu", email = "hello@nattadasu.my.id"}
]
description = "A TNCPAS-0001 Compatible Metadata Parser Library in Python"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version", "readme"]

[project.urls]
Source = "https://github.com/theNewbieClub-MAL/metadataparser"
"Bug Tracker" = "https://github.com/theNewbieClub-MAL/metadataparser"

[tool.setuptools.dynamic]
version = { attr = "tncpas_metadata.__version__" }
readme = { file = "README.md", parser = "markdown" }